--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Wed Oct 29 12:07:11 IST 2014
+#Fri Feb 27 11:24:40 IST 2015
 eclipse.preferences.version=1
-include_path=0;/assets
+include_path=0;/asset_talha
