--- a/.settings/org.eclipse.php.core.prefs
+++ b/.settings/org.eclipse.php.core.prefs
@@ -1,3 +1,3 @@
-#Fri Feb 27 11:24:40 IST 2015
+#Fri Mar 06 11:30:15 IST 2015
 eclipse.preferences.version=1
-include_path=0;/asset_talha
+include_path=0;/asset
